@@ -296,11 +296,14 @@ void FrameLoaderClientQt::transitionToCommittedForNewPage()
 
     bool isMainFrame = m_frame == m_frame->page()->mainFrame();
     if (isMainFrame && page->d->client) {
-        m_frame->view()->setPaintsEntireContents(page->d->client->viewResizesToContentsEnabled());
-        m_frame->view()->setDelegatesScrolling(page->d->client->viewResizesToContentsEnabled());
+        bool resizesToContents = page->d->client->viewResizesToContentsEnabled();
+
+        m_frame->view()->setPaintsEntireContents(resizesToContents);
+        m_frame->view()->setDelegatesScrolling(resizesToContents);
 
         // The HistoryController will update the scroll position later if needed.
-        m_frame->view()->setFixedVisibleContentRect(IntRect(IntPoint::zero(), currentVisibleContentSize));
+        IntRect rect = resizesToContents ? IntRect(IntPoint::zero(), currentVisibleContentSize) : IntRect();
+        m_frame->view()->setFixedVisibleContentRect(rect);
     }
 }
 
